--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 			<div id="modelBorder"></div>
 		</div>
 		<script type="application/javascript">
-			const modelUrl = 'models/glb/fengche.glb';     //模型路径
+			const modelUrl = 'models/gltf/swamp/scene.gltf';     //模型路径
+		//	const modelUrl = 'models/glb/fengche.glb';
 		</script>
 		<script src="js/three.min.js"></script>
 		<script src="js/OrbitControls.js"></script>
